PAYARA-3072 PAYARA-3073 remove support for java.ext.dirs and java.endorsed.dirs