@@ -37,10 +37,10 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
+// Portions Copyright [2018] Payara Foundation and/or affiliates
 
 package org.glassfish.appclient.client;
 
-import com.sun.enterprise.util.JDK;
 import com.sun.enterprise.util.LocalStringManager;
 import com.sun.enterprise.util.LocalStringManagerImpl;
 import com.sun.enterprise.util.OS;
@@ -62,8 +62,8 @@ import org.glassfish.appclient.client.acc.UserError;
  * <p>
  * The user might have specified JVM options as well as ACC options as
  * well as arguments to be passed to the client.  Further, we need to make
- * sure that the GlassFish extension libraries directories and endorsed
- * directories are included in java.ext.dirs and java.endorsed.dirs,
+ * sure that the GlassFish extension libraries directories
+ * directories are included
  * regardless of whether the user specified any explicitly.
  * <p>
  * This program emits a java command line that will run the ACC so that it
@@ -72,7 +72,6 @@ import org.glassfish.appclient.client.acc.UserError;
  * {@code
  * java \
  *   (user-specified JVM options except -jar) \
- *   (settings for java.ext.dirs and java.endorsed.dirs) \
  *   -javaagent:(path-to-gf-client.jar)=(option string for our agent) \
  *   (main class setting: "-jar x.jar" or "a.b.Main" or "path-to-file.class")
  *   (arguments to be passed to the client)
@@ -119,9 +118,6 @@ public class CLIBootstrap {
     private final static String[] ENV_VARS = {
         "_AS_INSTALL", "APPCPATH", "VMARGS"};
 
-    private final static String EXT_DIRS_INTRODUCER = "-Djava.ext.dirs";
-    private final static String ENDORSED_DIRS_INTRODUCER = "-Djava.endorsed.dirs";
-
     private static final LocalStringManager localStrings = new LocalStringManagerImpl(CLIBootstrap.class);
 
     private JavaInfo java;
@@ -134,9 +130,9 @@ public class CLIBootstrap {
      * set up during init with various subtypes of command line elements
      */
     private CommandLineElement
-            extDirs, endorsedDirs, accValuedOptions, accUnvaluedOptions,
+            accValuedOptions, accUnvaluedOptions,
             jvmPropertySettings, jvmValuedOptions, otherJVMOptions, arguments;
-
+    
     /** arguments passed to the ACC Java agent */
     private final AgentArgs agentArgs = new AgentArgs();
 
@@ -257,17 +253,6 @@ public class CLIBootstrap {
          * Assign the various command line element matchers.  See the
          * descriptions of each subtype for what each is used for.
          */
-        extDirs = new OverridableDefaultedPathBasedOption(
-            EXT_DIRS_INTRODUCER,
-            userVMArgs.evExtDirs,
-            java.ext().getAbsolutePath(),
-            gfInfo.extPaths());
-
-        endorsedDirs = new OverridableDefaultedPathBasedOption(
-            ENDORSED_DIRS_INTRODUCER,
-            userVMArgs.evEndorsedDirs,
-            java.endorsed().getAbsolutePath(),
-            gfInfo.endorsedPaths());
 
         accValuedOptions = new ACCValuedOption(ACC_VALUED_OPTIONS_PATTERN);
 
@@ -296,8 +281,6 @@ public class CLIBootstrap {
          * most specific to most general.
          */
         elementsInScanOrder = new CommandLineElement[] {
-            extDirs,
-            endorsedDirs,
             accValuedOptions,
             accUnvaluedOptions,
             jvmValuedOptions,
@@ -311,32 +294,16 @@ public class CLIBootstrap {
          * java command in the correct positions.
          */
         //In JDK 9 and later ext and endorsed directory removed .
-        int major = JDK.getMajor();
-        if(major >= 9) {
-            elementsInOutputOrder = new CommandLineElement[]{
-                    jvmValuedOptions,
-                    jvmPropertySettings,
-                    otherJVMOptions,
-                    accUnvaluedOptions,
-                    accValuedOptions,
-                    jvmMainSetting,
-                    arguments
-            };
-        }
-        else
-        {
-            elementsInOutputOrder = new CommandLineElement[] {
-                    jvmValuedOptions,
-                    jvmPropertySettings,
-                    otherJVMOptions,
-                    extDirs,
-                    endorsedDirs,
-                    accUnvaluedOptions,
-                    accValuedOptions,
-                    jvmMainSetting,
-                    arguments
-            };
-        }
+        elementsInOutputOrder = new CommandLineElement[] {
+            jvmValuedOptions,
+            jvmPropertySettings,
+            otherJVMOptions,
+            accUnvaluedOptions,
+            accValuedOptions,
+            jvmMainSetting,
+            arguments
+        };
+        
     }
 
     /**
@@ -856,8 +823,7 @@ public class CLIBootstrap {
      * options on the command line then we discard the Java installation values
      * and append the GlassFish values to the user's values.
      * <p>
-     * This is used for handling java.ext.dirs and java.endorsed.dirs property
-     * settings.  If the user does not specify the property then the user would
+     * If the user does not specify the property then the user would
      * expect the Java-provided directories to be used. We need to
      * specify the GlassFish ones, so that means we need combine the GlassFish
      * ones and the default JVM ones explicitly.
@@ -1229,8 +1195,9 @@ public class CLIBootstrap {
      */
     class UserVMArgs {
 
-        private CommandLineElement evExtDirs, evEndorsedDirs,
-                evJVMPropertySettings, evJVMValuedOptions, evOtherJVMOptions;
+        private CommandLineElement evJVMPropertySettings;
+        private CommandLineElement evJVMValuedOptions;
+        private CommandLineElement evOtherJVMOptions;
 
         private final List<CommandLineElement> evElements = new ArrayList<CommandLineElement>();
 
@@ -1239,17 +1206,6 @@ public class CLIBootstrap {
             if (isDebug) {
                 System.err.println("VMARGS = " + (vmargs == null ? "null" : vmargs));
             }
-            evExtDirs = new OverridableDefaultedPathBasedOption(
-                EXT_DIRS_INTRODUCER,
-                null,
-                java.ext().getAbsolutePath(),
-                gfInfo.extPaths());
-
-            evEndorsedDirs = new OverridableDefaultedPathBasedOption(
-                ENDORSED_DIRS_INTRODUCER,
-                null,
-                java.endorsed().getAbsolutePath(),
-                gfInfo.endorsedPaths());
 
             evJVMPropertySettings = new JVMOption("-D.*", null);
 
@@ -1267,8 +1223,6 @@ public class CLIBootstrap {
         }
 
         private void initEVCommandLineElements() {
-            evElements.add(evExtDirs);
-            evElements.add(evEndorsedDirs);
             evElements.add(evJVMPropertySettings);
             evElements.add(evJVMValuedOptions);
             evElements.add(evOtherJVMOptions);
